# visiotalk

./: .gitignore  Cargo.toml
.sisyphus/plans/: doc-consistency-fixes.md
crates/vt-cli/: Cargo.toml
crates/vt-cli/src/: debug.rs  main.rs
crates/vt-cli/tests/: debug_snapshots.rs
crates/vt-cli/tests/fixtures/: multi_rule.vt  sample.vt
crates/vt-cli/tests/snapshots/: debug_snapshots__debug_empty.snap  debug_snapshots__debug_multi_rule.snap  debug_snapshots__debug_sample.snap
crates/vt-codegen/: Cargo.toml
crates/vt-codegen/src/: javascript.rs  lib.rs  python.rs
crates/vt-core/: Cargo.toml
crates/vt-core/src/: lib.rs
crates/vt-lexer/: Cargo.toml
crates/vt-lexer/src/: lib.rs
crates/vt-parser/: Cargo.toml  build.rs
crates/vt-parser/src/: grammar.lalrpop  lib.rs
crates/vt-parser/tests/: parse_tests.rs
crates/vt-parser/tests/fixtures/invalid/: missing_brace.vt  missing_value.vt  unknown_key.vt
crates/vt-parser/tests/fixtures/valid/: all_comparators.vt  all_units.vt  example_full.vt  minimal_no_mode.vt  whitespace_comments.vt
crates/vt-parser/tests/snapshots/: parse_tests__valid_example_full.snap
crates/vt-semantics/: Cargo.toml
crates/vt-semantics/src/: lib.rs
docs/: IMPLEMENTATION_PLAN.md  LEARNING_TOPICS.md  PRD.md  TECH_STACK.md  avance.md  context.md  grammar.md  questions.md
openspec/: config.yaml
openspec/changes/archive/2026-05-22-add-compiler-debug-tracing/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-22-add-compiler-debug-tracing/specs/compiler-debug/: spec.md
openspec/changes/archive/2026-05-22-add-compiler-debug-tracing/specs/compiler-pipeline/: spec.md
openspec/changes/archive/2026-05-22-phase-2-compiler-frontend/: design.md  proposal.md  tasks.md
openspec/changes/phase-3-semantic-analysis/: design.md  proposal.md  tasks.md
openspec/changes/phase-3-semantic-analysis/specs/semantic-validation/: spec.md
openspec/specs/compiler-debug/: spec.md
openspec/specs/compiler-pipeline/: spec.md
runtime-desktop/: .ruff.toml  pyproject.toml
runtime-desktop/src/: visio_engine.py
runtime-mobile/: app.json  package-lock.json  package.json
runtime-mobile/android/: settings.gradle
runtime-mobile/android/app/: build.gradle
runtime-mobile/ios/: Podfile
runtime-mobile/ios/VisioTalkMobile/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
runtime-mobile/ios/VisioTalkMobile.xcodeproj/: project.pbxproj
runtime-mobile/ios/VisioTalkMobile.xcodeproj/xcshareddata/xcschemes/: VisioTalkMobile.xcscheme
(+5 files in other folders)
