[workspace]
resolver = "2"
members = [
    "crates/vt-core",
    "crates/vt-lexer",
    "crates/vt-parser",
    "crates/vt-semantics",
    "crates/vt-codegen",
    "crates/vt-cli",
]

[workspace.dependencies]
logos = "0.14"
lalrpop = "0.20"
lalrpop-util = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
askama = "0.12"
clap = { version = "4.5", features = ["derive"] }
ariadne = "0.4"
pyo3 = { version = "0.21", features = ["extension-module"] }
insta = "1.39"

[workspace.lints.rust]
unsafe_code = "forbid"
